Добавлен плагин jetty-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
             </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.4.30.v20200611</version>
+            </plugin>
         </plugins>
     </build>
 </project>
